fixes #334. Changed the logic of EzWeb for switching through tabs to use the 'display' css property by default, and the 'visibility' css property on Firefox 2.
--HG--
extra : convert_revision : svn%3A2a98c5bb-d66c-48ca-a96c-db028a6c31f4/ezweb_platform/src/trunk%401632

--- a/media/css/ezweb.css
+++ b/media/css/ezweb.css
@@ -564,7 +564,7 @@ button {
 /*  overflow-x: auto;*/
   overflow-y: auto;
   z-index: 1;
-  visibility: hidden;
+  display: none;
   -moz-border-radius: 5px;
   -webkit-border-radius: 6px;
 }
