--- a/media/css/wiring.css
+++ b/media/css/wiring.css
@@ -1,5 +1,4 @@
 #wiring {
-  display: block;
 }
 
 #wiring_container {
